# squad_albert

./: README.md  leap.yaml  leap_binder.py  leap_custom_test.py  leap_integration.py  leap_mapping.yaml  pyproject.toml  requirements.txt
model/: albert_converted.h5
squad_albert/: loss.py  metrics.py  project_config.yaml
squad_albert/data/: preprocess.py
squad_albert/utils/: data.py  utils.py
