[tool.poetry]
name = "squad_albert"
version = "0.1.0"
description = ""
authors = ["Chen Rothschild <chen.rothschild@tensorleap.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8, <3.11"
code-loader = "^1.0.79"
readability = "0.3.1"
transformers = "4.29.2"
readability-lxml = "^0.8.1"
textstat = "^0.7.5"
py-readability-metrics = "^1.4.5"
sentencepiece = "^0.2.0"
datasets = "^2.20.0"
lxml-html-clean = "^0.4.2"
code-loader-helpers = "^1.0.20"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
test = "leap_test: check_integration"
custom_test = "leap_custom_test: check_custom_integration"




